<resources>
    <string name="app_name">Love App</string>
    <string name="name">Love</string>
    <string name="by">By</string>
    <string name="descLogo">Logo</string>
    <string name="e_mail">E-Mail</string>
    <string name="password">Password</string>
    <string name="Login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_mayus">SIGN UP</string>
    <string name="WriteEmail">Write E-Mail</string>
    <string name="register">Register</string>
    <string name="WritePassword">Write Password</string>
    <string name="skip">Skip</string>
    <string name="EnterMsg">Enter message</string>
    <string name="userMsg">User Message</string>
    <string name="descUser">ImgUserChat</string>
    <string name="botMsg">Bot Message</string>
    <string name="descBot">ImgBotChat</string>
    <string name="chatBot">ChatBot</string>
    <string name="history">Historias</string>
    <string name="imgChatBot">ImgChatBot</string>
    <string name="imgHistory">ImgHistory</string>
    <string name="chats">Chatea con otras personas</string>
    <string name="help">Help?</string>
    <string name="coming">Coming Soon</string>
    <string name="malvado">Vampiro Malvado</string>
    <string name="vampiro">Vampiro Amigable</string>
    <string name="acampar">Acampada</string>
    <string name="teo">Conoce a Teo, sera una IA próximamente</string>
</resources>