<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".History">

    <Button
        android:id="@+id/teo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="200dp"
        android:background="@drawable/element_without_nothing"
        android:fontFamily="monospace"
        android:text="@string/teo"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/vampiro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/vampiro"
        android:layout_width="150dp"
        android:textColor="@color/white"
        android:fontFamily="monospace"
        android:layout_height="150dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="50dp"
        android:text="@string/vampiro"
        android:background="@drawable/element_without_nothing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/malvado"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="200dp"
        android:background="@drawable/element_without_nothing"
        android:fontFamily="monospace"
        android:text="@string/malvado"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/acampar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/teo" />

    <Button
        android:id="@+id/acampar"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="200dp"
        android:background="@drawable/element_without_nothing"
        android:fontFamily="monospace"
        android:text="@string/acampar"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vampiro" />
</androidx.constraintlayout.widget.ConstraintLayout>