<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/black"
    android:layout_height="match_parent"
    tools:context=".MenuApp">

    <ImageButton
        android:id="@+id/chatBot"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/element_without_nothing"
        android:contentDescription="@string/chatBot"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/history"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/evaimg" />

    <ImageButton
        android:id="@+id/history"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="200dp"
        android:background="@drawable/element_without_nothing"
        android:contentDescription="@string/history"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/vampire" />

    <Button
        android:id="@+id/help"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="200dp"
        android:background="@drawable/element_without_nothing"
        android:text="@string/help"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/chats"
        app:layout_constraintTop_toBottomOf="@+id/chatBot" />

    <Button
        android:id="@+id/chats"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="200dp"
        android:background="@drawable/element_without_nothing"
        android:text="@string/chats"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/history" />

    <TextView
        android:id="@+id/historyText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginBottom="-20dp"
        android:text="@string/history"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/history"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="10dp"
        android:text="@string/chatBot"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/chatBot"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>